# seven_failures_game

./: .gitignore  README.md  manage.py  pyproject.toml
jogo_das_7_falhas/: asgi.py  settings.py  urls.py  wsgi.py
lobby/: urls.py  utils.py  views.py
lobby/static/lobby/css/: class.css  index_class.css  index_tag.css  tag.css
lobby/static/lobby/css/index/: class.css  tag.css
lobby/static/lobby/css/insert_users/: class.css  tag.css
lobby/templates/lobby/: base.html  index.html  insert_users.html  show_games.html
locale/es/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
locale/show/LC_MESSAGES/: django.po
seven_failures_game/: asgi.py  settings.py  urls.py  wsgi.py
tester/: forms.py  models.py
tester/migrations/: 0001_initial.py
